fixed z-index on top bar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,10 @@ body {
   overflow-x: hidden;
 }
 
+::selection {
+  background: rgb(166, 131, 2);
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
